Update the index.html file

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
       </section>
 
-      <a href="https://youtu.be/y8Yv4pnO7qc" id="video-link"><a/>
+      <a href="https://youtu.be/y8Yv4pnO7qc" id="video-link"></a>
 
       <footer id="footer">
         <p><a href="#">Privacy</a>
